[CRD iOS] Properly handle in-session connection failures

* Makes ChromotingSession automatically release its resources when the
  connection is closed or dropped remotely, so that scheduled tasks
  don't crash the app.
* Makes ConnectionViewController pop out the host view and reveal the
  error message when the connection is dropped.

Bug: 794268
Change-Id: I739dc6efd8dc716f16c8832d34f0f9a9b349af99